src/test/deca/context/invalid/without_class/incompatible_type_op_arith2.deca
// Description:
//    Error : operator addition not defined with type boolean
//
// Result:
//    INCOMPATIBLE_TYPE_OPERATOR: Type \(.\)\+ is incompatible with type \(.\)\+ for the operator \(.\)\+
//    line 10
{
    boolean b = true;
    int a = 0;
    print("addition is not defined with a type int and a boolean ", a+b);
}